# CapeDar

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
configs/: aop_presence_10fps.cfg  detection_gates.example.json  detection_gates.json  detection_gates_pi.json  recommended_2_no_noise.cfg
src/aop_presence/: __init__.py  cli.py  clustering.py  config.py  custom_types.py  filters.py  gpio.py  gui.py  headless.py  multitarget.py  parser.py  pipeline.py  plotview.py  presence.py  protocol.py  reader.py  resources.py  sensor.py  simulator.py  sizing.py  types.py  worker.py
tests/: test_detection.py  test_end_to_end.py  test_headless.py  test_multitarget.py  test_parser.py  test_signal_runner.py
