[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "aop-presence"
version = "0.1.0"
description = "Presence detection, ranging, and sizing for the TI AWR6843AOPEVM mmWave radar"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    "pyserial>=3.5",
]

[project.optional-dependencies]
gui = [
    "PyQt6>=6.5",
    "pyqtgraph>=0.13",
    "numpy>=1.24",
]
dev = [
    "PyQt6>=6.5",
    "pyqtgraph>=0.13",
    "numpy>=1.24",
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "ruff>=0.4",
    "mypy>=1.8",
]

[project.scripts]
aop-presence = "aop_presence.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q --strict-markers"

[tool.mypy]
python_version = "3.12"
strict = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
disallow_untyped_decorators = true
warn_return_any = true
warn_unreachable = true
disallow_any_generics = true
disallow_subclassing_any = true
files = ["src", "tests"]

[[tool.mypy.overrides]]
module = ["pyqtgraph.*", "serial.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["numpy", "numpy.*"]
follow_imports = "skip"

[tool.ruff]
target-version = "py310"
line-length = 99
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E", "W", "F", "I", "N", "UP", "B", "A", "C4", "SIM",
    "RET", "ARG", "ERA", "RUF", "TCH", "T20", "PTH", "PERF", "LOG",
]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["ARG"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
